@@ -16,6 +16,7 @@ v8.0.29
 - WL#14824: Remove Python 3.6 support
 - WL#14679: Allow custom class for data type conversion in Django backend
 - WL#14665: SSPI Kerberos authentication for Windows (pure-python)
+- BUG#33861549: Replace SHOW VARIABLES inefficient statements
 - BUG#33747585: Fix error when using an expression as a column without an alias
 - BUG#33729842: Character set 'utf8mb3' support
 - BUG#28877987: Return bytes or bytearray if decoding fails
